fixed dropdown not showing on mobile in certain screen orientations

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -82,7 +82,7 @@ a {
   }
 }
 
-@media only screen and (min-width: 501px), (max-height: 426px) {
+@media only screen and (min-width: 501px) and (max-height: 426px) {
   .dd {
     display: none;
   }
